fix padding so no navbar covers

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -10,10 +10,6 @@ nav a:hover {
 }
 
 @media (max-width: 576px) {
-  .navbar {
-  
-  }
-
   .navbar a {
     font-size: 18px;
   }
