--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,3 +1,6 @@
+.App { 
+    padding-top: 55px; 
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
